# ConnectTool

./: .gitignore  CMakeLists.txt  README.md  app.manifest  build.ps1  online_game_tool.cpp  server_main.cpp  vcpkg.json
config/: config_manager.cpp  config_manager.h  default_config.json
core/: connect_tool_core.cpp  connect_tool_core.h
net/: vpn_protocol.h
protos/: connect_tool.proto
steam/: steam_message_handler.cpp  steam_message_handler.h  steam_networking_manager.cpp  steam_networking_manager.h  steam_room_manager.cpp  steam_utils.cpp  steam_utils.h  steam_vpn_bridge.cpp  steam_vpn_bridge.h
tun/: tun_interface.h  tun_linux.cpp  tun_linux.h  tun_macos.cpp  tun_macos.h  tun_windows.cpp  tun_windows.h
vpn/: vpn_protocol.h
